@@ -9,6 +9,8 @@ Changes to Version 3.0-13
   o New vif.lm() method with options for handling linear models with interactions.
   
   o Fixed bug in cooks.distance.influence.lme() (in effect, incorrect division by the error variance twice rather than once), and a sign error in dfbeta.influence.lme() and dfbetas.influence.lme() (following report by Ben Bolker).
+  
+  o Added an error.df argument to the default methods of linearHypothesis() and Anova() for computing F-tests; if the argument is unspecified, then df.residual() is applied to the model, and if df.residual() returns NULL or NA, then an asymptotic chi-square test is substituted for the F-test (in response to a report by Adrian Olszewski that Anova() fails for gls models when an F-test is requested).
 
 Changes to Version 3.0-12
 
